# toy_cqrs_event_sourcing_shooping_list

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt  event.h  event_projector.h  event_publisher.h  event_repository.h  main.cpp  rest_utils.h  service.cpp  service.h
src/commands/: add_item_command.h  remove_item_command.h  undo_command.h
src/dto/: item.h  shopping_list.h
src/dto/serialization/: item.h  shopping_list.h
src/queries/: empty_list_query.h  get_list_query.h
src/service/: shopping_list_service.h
tests/: CMakeLists.txt  shoppinglist_tests.cpp
